{
  "version": 4,
  "terraform_version": "0.12.6",
  "serial": 41,
  "lineage": "36a112a2-7a08-a47b-8821-dda9f20803a9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "gobananas-dev-lb-access-logs",
                "enabled": true
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:664970746922:loadbalancer/app/gobananas-dev/875b0d6db44477ca",
            "arn_suffix": "app/gobananas-dev/875b0d6db44477ca",
            "dns_name": "gobananas-dev-725081321.us-east-1.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:664970746922:loadbalancer/app/gobananas-dev/875b0d6db44477ca",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "gobananas-dev",
            "security_groups": [
              "sg-0b83cd53875b486a8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-4bf51f06"
              },
              {
                "subnet_id": "subnet-6cbed052"
              },
              {
                "subnet_id": "subnet-7606212a"
              },
              {
                "subnet_id": "subnet-7e022350"
              }
            ],
            "subnets": [
              "subnet-4bf51f06",
              "subnet-6cbed052",
              "subnet-7606212a",
              "subnet-7e022350"
            ],
            "tags": {
              "application": "gobananas",
              "environment": "dev"
            },
            "vpc_id": "vpc-e2daad98",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "depends_on": [
            "aws_s3_bucket.lb_access_logs",
            "aws_security_group.nsg_lb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:664970746922:listener/app/gobananas-dev/875b0d6db44477ca/c4d4fe7e21057277",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:664970746922:targetgroup/gobananas-dev/87c3c39192306f1a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:664970746922:listener/app/gobananas-dev/875b0d6db44477ca/c4d4fe7e21057277",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:664970746922:loadbalancer/app/gobananas-dev/875b0d6db44477ca",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_alb.main",
            "aws_alb_target_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:664970746922:targetgroup/gobananas-dev/87c3c39192306f1a",
            "arn_suffix": "targetgroup/gobananas-dev/87c3c39192306f1a",
            "deregistration_delay": 30,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:664970746922:targetgroup/gobananas-dev/87c3c39192306f1a",
            "lambda_multi_value_headers_enabled": false,
            "name": "gobananas-dev",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "application": "gobananas",
              "environment": "dev"
            },
            "target_type": "ip",
            "vpc_id": "vpc-e2daad98"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nsg_lb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:664970746922:security-group/sg-0b83cd53875b486a8",
            "description": "Allow connections from external resources while limiting connections from gobananas-dev-lb to internal resources",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Only allow SG gobananas-dev-lb to connect to gobananas-dev-task on port 8080",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b714e345bf2386aa"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "id": "sg-0b83cd53875b486a8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "gobananas-dev-lb",
            "name_prefix": null,
            "owner_id": "664970746922",
            "revoke_rules_on_delete": false,
            "tags": {
              "application": "gobananas",
              "environment": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-e2daad98"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nsg_task",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:664970746922:security-group/sg-0b714e345bf2386aa",
            "description": "Limit connections from internal resources while allowing gobananas-dev-task to connect to all external resources",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allows task to establish connections to all resources",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b714e345bf2386aa",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Only allow connections from SG gobananas-dev-lb on port 8080",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b83cd53875b486a8"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "gobananas-dev-task",
            "name_prefix": null,
            "owner_id": "664970746922",
            "revoke_rules_on_delete": false,
            "tags": {
              "application": "gobananas",
              "environment": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-e2daad98"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_lb_http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-3942379160",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b83cd53875b486a8",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.nsg_lb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nsg_lb_egress_rule",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Only allow SG gobananas-dev-lb to connect to gobananas-dev-task on port 8080",
            "from_port": 8080,
            "id": "sgrule-2497658496",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b83cd53875b486a8",
            "self": false,
            "source_security_group_id": "sg-0b714e345bf2386aa",
            "to_port": 8080,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.nsg_lb",
            "aws_security_group.nsg_task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nsg_task_egress_rule",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allows task to establish connections to all resources",
            "from_port": 0,
            "id": "sgrule-1093273899",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0b714e345bf2386aa",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.nsg_task"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nsg_task_ingress_rule",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Only allow connections from SG gobananas-dev-lb on port 8080",
            "from_port": 8080,
            "id": "sgrule-1591264541",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b714e345bf2386aa",
            "self": false,
            "source_security_group_id": "sg-0b83cd53875b486a8",
            "to_port": 8080,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.nsg_lb",
            "aws_security_group.nsg_task"
          ]
        }
      ]
    }
  ]
}